[package]
name = "todo"
description = "A Commandline Tasks Manager"
version = "0.3.0"
edition = "2024"
authors = ["Juan Milkah <juanmilkah@proton.me>"]
repository = "https://github.com/juanmilkah/todo"
license = "GNU GPL3"

[dependencies]
bincode2 = "2.0.1"
clap = { version = "4.5.32", features = ["derive"] }
home ="0.5.11" 
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.19.1"

[profile.release]
codegen-units = 1
strip = true
lto = "thin"
opt-level = "s"
