[package]
name = "todo"
description = "A Commandline Tasks Manager"
version = "0.3.0"
edition = "2024"
authors = ["Juan Milkah <juanmilkah@proton.me>"]
repository = "https://github.com/juanmilkah/todo"
license = "GNU GPL3"

[dependencies]
bincode2 = "2.0.1"
clap = { version = "4.5.32", features = ["derive"] }
flate2 = "1.1.2"
home ="0.5.11" 
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.19.1"

[profile.release]
strip = "debuginfo"
lto = true
opt-level = 3
